--- a/JCOClasses/Core/JCOIssuePreviewCell.xib
+++ b/JCOClasses/Core/JCOIssuePreviewCell.xib
@@ -104,10 +104,9 @@
 							<object class="IBUILabel" id="347909637">
 								<reference key="NSNextResponder" ref="630144290"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{22, 28}, {255, 32}}</string>
+								<string key="NSFrame">{{22, 24}, {255, 32}}</string>
 								<reference key="NSSuperview" ref="630144290"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -305,7 +304,7 @@
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">JCONotificationTableCell</string>
+					<string key="className">JCOIssuePreviewCell</string>
 					<string key="superclassName">UITableViewCell</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -355,7 +354,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/JCONotificationTableCell.h</string>
+						<string key="minorKey">./Classes/JCOIssuePreviewCell.h</string>
 					</object>
 				</object>
 			</object>
