(mis)use a UIToolbar for adding custom buttons to, so multiple images+recordings may be attached to an issue. Angre Nerdified the Example App

--- a/JCOClasses/Core/JCOMessageCell.xib
+++ b/JCOClasses/Core/JCOMessageCell.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1056</int>
-		<string key="IBDocument.SystemVersion">10J567</string>
+		<string key="IBDocument.SystemVersion">10J869</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1305</string>
 		<string key="IBDocument.AppKitVersion">1038.35</string>
-		<string key="IBDocument.HIToolboxVersion">462.00</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">300</string>
@@ -59,6 +59,7 @@
 										<string key="NSFrame">{{8, 5}, {307, 21}}</string>
 										<reference key="NSSuperview" ref="781871352"/>
 										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="214628362"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<int key="IBUIContentMode">7</int>
@@ -85,12 +86,13 @@
 										<string key="NSFrame">{{8, 28}, {301, 33}}</string>
 										<reference key="NSSuperview" ref="781871352"/>
 										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<int key="IBUIContentMode">7</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<string key="IBUIText">This issue blows goats. I have a sample issue summary here.</string>
+										<string key="IBUIText">I have a sample issue summary here. It should wrap across 2 lines</string>
 										<object class="NSFont" key="IBUIFont">
 											<string key="NSName">Helvetica</string>
 											<double key="NSSize">14</double>
