--- a/JCOClasses/Core/JCOIssuePreviewCell.xib
+++ b/JCOClasses/Core/JCOIssuePreviewCell.xib
@@ -88,7 +88,7 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Main Title</string>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -125,7 +125,7 @@
 								<nil key="IBUIHighlightedColor"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 								<float key="IBUIMinimumFontSize">10</float>
-								<int key="IBUINumberOfLines">3</int>
+								<int key="IBUINumberOfLines">2</int>
 								<int key="IBUILineBreakMode">0</int>
 							</object>
 							<object class="IBUIImageView" id="775222735">
